--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
   #tac-input {
-      
-      font-size: 1em;
-   vertical-align: middle;
+    background-color: #fff;
+    font-size: 1em;
+    vertical-align: middle;
     border-radius: 0.4em;
     padding: 0.4em;
-    width: 6.5em;
+    
     border-style:solid;
     border-width: 1px;
     font-family: "Raleway", sans-serif;
@@ -16,7 +16,8 @@
     button:focus {outline:0;}
 
     #tacit {
-        font-size: 1em;
+    font-weight: 500;
+    font-size: 1em;
     border-radius: 0.4em;
     padding: 0.47em;
         
@@ -24,7 +25,7 @@
     background-color: #8be3ef;
     border: none;
     vertical-align: top;
-        text-align: center;
+    text-align: center;
 
     margin-left: 5px;
     color: #fff;
@@ -35,6 +36,11 @@
         display: inline;
         
     }
+
+#tacboard {
+    display: inline-block;
+    margin-left: 5px;
+}
 
 #tacboard-form span {
     font-family: "Raleway", sans-serif;
