--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@
         0.47em
         */
     border-radius: 0.4em;
-    padding: 0.2em;
-    padding-left: 0.47em;
-    padding-right: 0.47em;
+    padding: 0.33em;
+    padding-left: 0.57em;
+    padding-right: 0.57em;
         
     font-family: "Raleway", sans-serif;
     background-color: #8be3ef;
@@ -51,7 +51,7 @@
 }
 
 #tac {
-    width: 70px;
+   height: 33px;
     vertical-align: middle;
 }
 
